# isogleam

./: .gitignore  ANALYSIS.md  README.md  gleam.toml  manifest.toml
scripts/: ai_server.py  build_viewer.sh  pyproject.toml  requirements.txt
scripts/analysis/: analyze_urban_center.py  find_urban_core.py
scripts/etl/: fetch_osm.py
scripts/process/: stitch_capao_nvidia.py  stitch_tiles.py
scripts/test/: create_test.py  test_img2img.py  test_qwen.py  test_style_transfer.py
src/: fs_ffi.erl  isogleam.gleam  isogleam_image_ffi.erl  png_ffi.erl
src/isogleam/: config.gleam  grid.gleam  infill.gleam  qa.gleam  qwen_client.gleam
test/: generated_qa_test.gleam  qa_test.gleam  tensor_test.gleam.bak  test_ai.gleam  test_ai.gleam.bak  test_banana.gleam
viewer/: capao_nvidia.html  eex  elixir  gleam_elixir_paths  index.html  logger  mix
viewer/ansel/: ansel.erl  ansel@bounding_box.erl  ansel@color.erl  ansel@image.erl
viewer/isogleam/: generated_qa_test.mjs  http_ffi.erl  httpc_ffi.erl  isogleam.mjs  isogleam_test.mjs  qa_test.mjs  test_banana.mjs
viewer/lustre/: lustre.erl  lustre.mjs  lustre@component.erl  lustre@dev@query.erl  lustre@dev@simulate.erl  lustre@element@keyed.erl  lustre@element@mathml.erl  lustre@element@svg.erl  lustre@event.erl  lustre@runtime@server@runtime.erl  lustre@server_component.erl  priv
viewer/viva_tensor/: viva_tensor.erl  viva_tensor.mjs  viva_tensor@auto_tune.erl  viva_tensor@autograd.erl  viva_tensor@awq.erl  viva_tensor@axis.erl  viva_tensor@bench_concurrent.erl  viva_tensor@bench_gpu.erl  viva_tensor@benchmark_full.erl  viva_tensor@blackwell.erl  viva_tensor@compression.erl  viva_tensor@config.erl  viva_tensor@demo.erl  viva_tensor@flash_attention.erl  viva_tensor@metrics.erl  viva_tensor@named.erl  viva_tensor@nf4.erl  viva_tensor@nn.erl  viva_tensor@pool.erl  viva_tensor@rtx4090.erl  viva_tensor@sparsity.erl  viva_tensor@tensor.erl  viva_tensor@training_demo.erl
(+301 files in other folders)
