[project]
name = "isogleam-scripts"
version = "0.1.0"
description = "Python worker scripts for IsoGleam generation pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "shapely>=2.0.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "gradio_client>=0.7.0",
    "requests>=2.31.0",
    "pyvista>=0.42.0",
    "psycopg2-binary>=2.9.9",
    "rembg>=2.0.50",
    "osmnx>=1.7.1",
    "pyproj>=3.6.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
