[project]
name = "isogleam-ai"
version = "0.1.0"
description = "AI Server & Generation Scripts for IsoGleam"
authors = [{ name = "Gabriel Maia", email = "gabriel@isogleam.com" }]
requires-python = ">=3.11"
dependencies = [
    # AI Server
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "diffusers>=0.26.0",
    "transformers>=4.37.0",
    "accelerate>=0.27.0",
    "opencv-python>=4.9.0",
    "safe-tensors>=0.4.2",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    
    # Scripts & Geo
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "shapely>=2.0.0",
    "numpy>=1.26.0",
    "pillow>=10.2.0",
    "gradio_client>=0.7.0",
    "requests>=2.31.0",
    "pyvista>=0.42.0",
    "psycopg2-binary>=2.9.9",
    "rembg>=2.0.50",
    "osmnx>=1.7.1",
    "pyproj>=3.6.1"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "mypy>=1.8.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
